--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <!--navbar -->
 
 <body>
@@ -26,45 +27,51 @@
     </header>
 
     <!--The programs of the gym-->
-    <div class="program">
+
+    <div id="offer" class="program">
         <div class="classes">
             <p>Group Training Classes </p>
-            <img src="istockphoto-1127485222-612x612.jpg" alt="">
+            <img src="images/istockphoto-1127485222-612x612.jpg" alt="gym picture">
         </div>
         <div class="personaltraining">
             <p> Personal Training </p>
-            <img src="istockphoto-1309886139-612x612.jpg" alt="">
+            <img src="images/istockphoto-1309886139-612x612.jpg" alt="gym picture">
         </div>
         <div class="boxing">
             <p> Boxing Classes</p>
-            <img src="istockphoto-182716189-612x612.jpg" alt="">
+            <img src="images/istockphoto-182716189-612x612.jpg" alt="gym picture">
         </div>
         <section class="statement">
             <h2> “The deadlift also serves as a way to train the mind to do things that are hard."</h2>
         </section>
     </div>
-    <div class="team">
+
+    <!--The team of the gym-->
+
+    <div id="team" class="team">
         <h3>Meet Our Team</h3>
     </div>
-    <!--The team of the gym-->
+
     <section class="ourteam">
         <div>
-            <img src="istockphoto-675179390-612x612.jpg" alt="">
+            <img src="images/istockphoto-675179390-612x612.jpg" alt="Alex Lasker photo">
             <h4>Alex Lasker</h4>
             <h5>Gym Manager</h5>
         </div>
         <div>
-            <img src="female-fitness-instructor.jpg" alt="">
+            <img src="images/female-fitness-instructor.jpg" alt="Lisa Fischer photo">
             <h4>Lisa Fischer</h4>
             <h5>Certified Personal trainer</h5>
         </div>
         <div>
-            <img src="Personal-Trainer.jpg" alt="">
+            <img src="images/Personal-Trainer.jpg" alt="Omar Carlsen photo">
             <h4>Omar Carlsen</h4>
             <h5>Group Fitness Instructor</h5>
         </div>
     </section>
+
     <!--The details of the gym-->
+
     <div class="footer">
         <div class="socialmedia">
             <a href="#" class="fa fa-facebook"></a>
@@ -72,7 +79,7 @@
             <a href="#" class="fa fa-instagram"></a>
             <a href="#" class="fa fa-pinterest"></a>
         </div>
-        <div class="contact">
+        <div id="contact" class="contact">
             <h6>High Street 175 <br>London </h6>
             <h6>Email:info@domain.com</h6>
             <h6>Phone:+440000000000</h6>
